--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="nav-listt">
             <li>
                 <a href="#" class="logo">
-                    <i><img src="/Images/logo.png" alt=""></i>
+                    <i><img src="Images/logo.png" alt=""></i>
                     <span class="links_name"><img src="Images/logo (3).png" alt=""></span>
                 </a>
             </li>
