--- a/index.html
+++ b/index.html
@@ -112,10 +112,17 @@
                 </a>
             </li>
             <li>
-                <a href="#">
-                    <div><i class='bx bx-credit-card-alt'></i></div>
-                    <div><span class="">Payroll</span></div>
-                </a>
+                <button class="d-lg-none dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div><i class='bx bxs-chevron-up'></i></div>
+                    <div><span class="">More</span></div>
+                </button>
+                <ul class="dropdown-menu dropup">
+                    <li><a class="dropdown-item" href="#"><i class='bx bx-wallet'></i>Reimbursement</a></li>
+                    <li><a class="dropdown-item" href="#"><i class='bx bx-donate-heart'></i>Loans</a></li>
+                    <li><a class="dropdown-item" href="#"><i><iconify-icon
+                                    icon="f7:tickets"></iconify-icon></i>Tickets</a></li>
+                    <li><a class="dropdown-item" href="#"><i class='bx bx-log-out' id="log_out"></i>Logout</a></li>
+                </ul>
             </li>
         </div>
     </div>
@@ -131,15 +138,6 @@
             <div class="header-btns">
                 <a href=""><i class='bx bx-notification'></i></a>
                 <a href=""><i class='bx bx-user-circle'></i></a>
-                <button type="button" class="d-lg-none" data-bs-toggle="dropdown" aria-expanded="false"><iconify-icon
-                        icon="ph:dots-three-vertical-bold"></iconify-icon></button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"><i class='bx bx-wallet'></i>Reimbursement</a></li>
-                    <li><a class="dropdown-item" href="#"><i class='bx bx-donate-heart'></i>Loans</a></li>
-                    <li><a class="dropdown-item" href="#"><i><iconify-icon
-                                    icon="f7:tickets"></iconify-icon></i>Tickets</a></li>
-                    <li><a class="dropdown-item" href="#"><i class='bx bx-log-out' id="log_out"></i>Logout</a></li>
-                </ul>
             </div>
         </header>
 
