--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="leaves.html">
                     <div><i class='bx bxs-home-smile'></i></div>
                     <div><span class="">Leaves</span></div>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="attendance.html">
                     <div><i class='bx bxs-star-half'></i></div>
                     <div><span class="">Attendance</span></div>
                 </a>
