--- a/index.html
+++ b/index.html
@@ -30,49 +30,49 @@
                 </a>
             </li>
             <li>
-                <a href="#">
-                    <i class='bx bx-grid-alt'></i>
+                <a href="index.html">
+                    <i class='bx bx-grid-alt' style="color:#0ac30a;"></i>
                     <span class="links_name">Dashboard</span>
                 </a>
                 <span class="tooltip">Dashboard</span>
             </li>
             <li>
-                <a href="#">
+                <a href="leaves.html">
                     <i class='bx bxs-home-smile'></i>
                     <span class="links_name">Leaves</span>
                 </a>
                 <span class="tooltip">Leaves </span>
             </li>
             <li>
-                <a href="#">
+                <a href="attendance.html">
                     <i class='bx bxs-star-half'></i>
                     <span class="links_name">Attendance</span>
                 </a>
                 <span class="tooltip">Attendance</span>
             </li>
             <li>
-                <a href="#">
+                <a href="payroll.html">
                     <i class='bx bx-credit-card-alt'></i>
                     <span class="links_name">Payroll</span>
                 </a>
                 <span class="tooltip">Payroll</span>
             </li>
             <li>
-                <a href="#">
+                <a href="reimbursement.html">
                     <i class='bx bx-wallet'></i>
                     <span class="links_name">Reimbursement</span>
                 </a>
                 <span class="tooltip">Reimbursement</span>
             </li>
             <li>
-                <a href="#">
+                <a href="loans.html">
                     <i class='bx bx-donate-heart'></i>
                     <span class="links_name">Loans</span>
                 </a>
                 <span class="tooltip">Loans</span>
             </li>
             <li>
-                <a href="#">
+                <a href="tickets.html">
                     <i><iconify-icon icon="f7:tickets"></iconify-icon></i>
                     <span class="links_name">Tickets</span>
                 </a>
@@ -94,7 +94,7 @@
     <div class="mobilebar">
         <div class="mb-list">
             <li>
-                <a href="#" style="color: #02d102;">
+                <a href="index.html" style="color:#0ac30a;;">
                     <div><i class='bx bx-grid-alt'></i></div>
                     <div><span class="">Dashboard</span></div>
                 </a>
@@ -117,9 +117,12 @@
                     <div><span class="">More</span></div>
                 </button>
                 <ul class="dropdown-menu dropup">
-                    <li><a class="dropdown-item" href="#"><i class='bx bx-wallet'></i>Reimbursement</a></li>
-                    <li><a class="dropdown-item" href="#"><i class='bx bx-donate-heart'></i>Loans</a></li>
-                    <li><a class="dropdown-item" href="#"><i><iconify-icon
+                    <li><a class="dropdown-item" href="payroll.html"><i class='bx bx-credit-card-alt'></i>Payroll</a>
+                    </li>
+                    <li><a class="dropdown-item" href="reimbursement.html"><i class='bx bx-wallet'></i>Reimbursement</a>
+                    </li>
+                    <li><a class="dropdown-item" href="loans.html"><i class='bx bx-donate-heart'></i>Loans</a></li>
+                    <li><a class="dropdown-item" href="tickets.html"><i><iconify-icon
                                     icon="f7:tickets"></iconify-icon></i>Tickets</a></li>
                     <li><a class="dropdown-item" href="#"><i class='bx bx-log-out' id="log_out"></i>Logout</a></li>
                 </ul>
