--- a/loans.html
+++ b/loans.html
@@ -38,7 +38,7 @@
             </li>
             <li>
                 <a href="leaves.html">
-                    <i class='bx bxs-home-smile' style="color:#0ac30a;"></i>
+                    <i class='bx bxs-home-smile'></i>
                     <span class="links_name">Leaves</span>
                 </a>
                 <span class="tooltip">Leaves </span>
@@ -66,7 +66,7 @@
             </li>
             <li>
                 <a href="loans.html">
-                    <i class='bx bx-donate-heart'></i>
+                    <i class='bx bx-donate-heart' style="color:#0ac30a;"></i>
                     <span class="links_name">Loans</span>
                 </a>
                 <span class="tooltip">Loans</span>
@@ -100,7 +100,7 @@
                 </a>
             </li>
             <li>
-                <a href="leaves.html" style="color:#0ac30a;">
+                <a href="leaves.html">
                     <div><i class='bx bxs-home-smile'></i></div>
                     <div><span class="">Leaves</span></div>
                 </a>
@@ -121,7 +121,8 @@
                     </li>
                     <li><a class="dropdown-item" href="reimbursement.html"><i class='bx bx-wallet'></i>Reimbursement</a>
                     </li>
-                    <li><a class="dropdown-item" href="loans.html"><i class='bx bx-donate-heart'></i>Loans</a></li>
+                    <li><a class="dropdown-item" href="loans.html" style="color:#0ac30a;"><i
+                                class='bx bx-donate-heart'></i>Loans</a></li>
                     <li><a class="dropdown-item" href="tickets.html"><i><iconify-icon
                                     icon="f7:tickets"></iconify-icon></i>Tickets</a></li>
                     <li><a class="dropdown-item" href="#"><i class='bx bx-log-out' id="log_out"></i>Logout</a></li>
@@ -136,7 +137,7 @@
 
         <header>
             <div>
-                <h1 class="welcome-text">Leav<span>es</span></h1>
+                <h1 class="welcome-text" >Loa<span>ns</span></h1>
             </div>
             <div class="header-btns">
                 <a href=""><i class='bx bx-notification'></i></a>
