--- a/tickets.html
+++ b/tickets.html
@@ -38,7 +38,7 @@
             </li>
             <li>
                 <a href="leaves.html">
-                    <i class='bx bxs-home-smile' style="color:#0ac30a;"></i>
+                    <i class='bx bxs-home-smile'></i>
                     <span class="links_name">Leaves</span>
                 </a>
                 <span class="tooltip">Leaves </span>
@@ -73,7 +73,7 @@
             </li>
             <li>
                 <a href="tickets.html">
-                    <i><iconify-icon icon="f7:tickets"></iconify-icon></i>
+                    <i><iconify-icon icon="f7:tickets" style="color:#0ac30a;"></iconify-icon></i>
                     <span class="links_name">Tickets</span>
                 </a>
                 <span class="tooltip">Tickets</span>
@@ -100,7 +100,7 @@
                 </a>
             </li>
             <li>
-                <a href="leaves.html" style="color:#0ac30a;">
+                <a href="leaves.html">
                     <div><i class='bx bxs-home-smile'></i></div>
                     <div><span class="">Leaves</span></div>
                 </a>
@@ -122,7 +122,7 @@
                     <li><a class="dropdown-item" href="reimbursement.html"><i class='bx bx-wallet'></i>Reimbursement</a>
                     </li>
                     <li><a class="dropdown-item" href="loans.html"><i class='bx bx-donate-heart'></i>Loans</a></li>
-                    <li><a class="dropdown-item" href="tickets.html"><i><iconify-icon
+                    <li><a class="dropdown-item" href="tickets.html" style="color:#0ac30a;"><i><iconify-icon
                                     icon="f7:tickets"></iconify-icon></i>Tickets</a></li>
                     <li><a class="dropdown-item" href="#"><i class='bx bx-log-out' id="log_out"></i>Logout</a></li>
                 </ul>
@@ -136,7 +136,7 @@
 
         <header>
             <div>
-                <h1 class="welcome-text">Leav<span>es</span></h1>
+                <h1 class="welcome-text">Tick<span>ets</span></h1>
             </div>
             <div class="header-btns">
                 <a href=""><i class='bx bx-notification'></i></a>
