--- a/attendance.html
+++ b/attendance.html
@@ -4,13 +4,156 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tamil Accounting</title>
+    <link rel="shortcut icon" href="Images/logo.png" type="image/x-icon">
+    <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <body>
-    <center>
-        <h1>Working on Progress</h1>
-    </center>
+
+    <!-- Desktop Side Bar -->
+
+    <div class="maxsidebar">
+        <div class="logo-details">
+            <i class='bx bx-menu' id="btn"></i>
+        </div>
+        <div class="nav-listt">
+            <li>
+                <a href="#" class="logo">
+                    <i><img src="Images/logo.png" alt=""></i>
+                    <span class="links_name"><img src="Images/logo (3).png" alt=""></span>
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    <i class='bx bx-grid-alt'></i>
+                    <span class="links_name">Dashboard</span>
+                </a>
+                <span class="tooltip">Dashboard</span>
+            </li>
+            <li>
+                <a href="leaves.html">
+                    <i class='bx bxs-home-smile'></i>
+                    <span class="links_name">Leaves</span>
+                </a>
+                <span class="tooltip">Leaves </span>
+            </li>
+            <li>
+                <a href="attendance.html">
+                    <i class='bx bxs-star-half' style="color:#0ac30a;"></i>
+                    <span class="links_name">Attendance</span>
+                </a>
+                <span class="tooltip">Attendance</span>
+            </li>
+            <li>
+                <a href="payroll.html">
+                    <i class='bx bx-credit-card-alt'></i>
+                    <span class="links_name">Payroll</span>
+                </a>
+                <span class="tooltip">Payroll</span>
+            </li>
+            <li>
+                <a href="reimbursement.html">
+                    <i class='bx bx-wallet'></i>
+                    <span class="links_name">Reimbursement</span>
+                </a>
+                <span class="tooltip">Reimbursement</span>
+            </li>
+            <li>
+                <a href="loans.html">
+                    <i class='bx bx-donate-heart'></i>
+                    <span class="links_name">Loans</span>
+                </a>
+                <span class="tooltip">Loans</span>
+            </li>
+            <li>
+                <a href="tickets.html">
+                    <i><iconify-icon icon="f7:tickets"></iconify-icon></i>
+                    <span class="links_name">Tickets</span>
+                </a>
+                <span class="tooltip">Tickets</span>
+            </li>
+            <li class="profile">
+
+                <a href="#">
+                    <i class='bx bx-log-out' id="log_out"></i>
+                    <span class="links_name">Logout</span>
+                </a>
+                <span class="tooltip">Logout</span>
+            </li>
+        </div>
+    </div>
+
+    <!-- Mobile Bottom bar -->
+
+    <div class="mobilebar">
+        <div class="mb-list">
+            <li>
+                <a href="index.html">
+                    <div><i class='bx bx-grid-alt'></i></div>
+                    <div><span class="">Dashboard</span></div>
+                </a>
+            </li>
+            <li>
+                <a href="leaves.html">
+                    <div><i class='bx bxs-home-smile'></i></div>
+                    <div><span class="">Leaves</span></div>
+                </a>
+            </li>
+            <li>
+                <a href="attendance.html" style="color:#0ac30a;">
+                    <div><i class='bx bxs-star-half'></i></div>
+                    <div><span class="">Attendance</span></div>
+                </a>
+            </li>
+            <li>
+                <button class="d-lg-none dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div><i class='bx bxs-chevron-up'></i></div>
+                    <div><span class="">More</span></div>
+                </button>
+                <ul class="dropdown-menu dropup">
+                    <li><a class="dropdown-item" href="payroll.html"><i class='bx bx-credit-card-alt'></i>Payroll</a>
+                    </li>
+                    <li><a class="dropdown-item" href="reimbursement.html"><i class='bx bx-wallet'></i>Reimbursement</a>
+                    </li>
+                    <li><a class="dropdown-item" href="loans.html"><i class='bx bx-donate-heart'></i>Loans</a></li>
+                    <li><a class="dropdown-item" href="tickets.html"><i><iconify-icon
+                                    icon="f7:tickets"></iconify-icon></i>Tickets</a></li>
+                    <li><a class="dropdown-item" href="#"><i class='bx bx-log-out' id="log_out"></i>Logout</a></li>
+                </ul>
+            </li>
+        </div>
+    </div>
+
+    <!-- Dashboard -->
+
+    <section class="dashboard-section">
+
+        <header>
+            <div>
+                <h1 class="welcome-text">Attend<span>ance</span></h1>
+            </div>
+            <div class="header-btns">
+                <a href=""><i class='bx bx-notification'></i></a>
+                <a href=""><i class='bx bx-user-circle'></i></a>
+            </div>
+        </header>
+
+    </section>
+
+    <!-- Scripts -->
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
