--- a/payroll.html
+++ b/payroll.html
@@ -38,7 +38,7 @@
             </li>
             <li>
                 <a href="leaves.html">
-                    <i class='bx bxs-home-smile' style="color:#0ac30a;"></i>
+                    <i class='bx bxs-home-smile'></i>
                     <span class="links_name">Leaves</span>
                 </a>
                 <span class="tooltip">Leaves </span>
@@ -52,7 +52,7 @@
             </li>
             <li>
                 <a href="payroll.html">
-                    <i class='bx bx-credit-card-alt'></i>
+                    <i class='bx bx-credit-card-alt' style="color:#0ac30a;"></i>
                     <span class="links_name">Payroll</span>
                 </a>
                 <span class="tooltip">Payroll</span>
@@ -100,7 +100,7 @@
                 </a>
             </li>
             <li>
-                <a href="leaves.html" style="color:#0ac30a;">
+                <a href="leaves.html">
                     <div><i class='bx bxs-home-smile'></i></div>
                     <div><span class="">Leaves</span></div>
                 </a>
@@ -112,13 +112,14 @@
                 </a>
             </li>
             <li>
-                <button class="d-lg-none dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="d-lg-none dropdown-btn" data-bs-toggle="dropdown" aria-expanded="false"
+                    style="color:#0ac30a;">
                     <div><i class='bx bxs-chevron-up'></i></div>
                     <div><span class="">More</span></div>
                 </button>
                 <ul class="dropdown-menu dropup">
-                    <li><a class="dropdown-item" href="payroll.html"><i class='bx bx-credit-card-alt'></i>Payroll</a>
-                    </li>
+                    <li><a class="dropdown-item" href="payroll.html" style="color:#0ac30a;"><i
+                                class='bx bx-credit-card-alt'></i>Payroll</a></li>
                     <li><a class="dropdown-item" href="reimbursement.html"><i class='bx bx-wallet'></i>Reimbursement</a>
                     </li>
                     <li><a class="dropdown-item" href="loans.html"><i class='bx bx-donate-heart'></i>Loans</a></li>
@@ -136,7 +137,7 @@
 
         <header>
             <div>
-                <h1 class="welcome-text">Leav<span>es</span></h1>
+                <h1 class="welcome-text">Pay<span>roll</span></h1>
             </div>
             <div class="header-btns">
                 <a href=""><i class='bx bx-notification'></i></a>
