--- a/attendance.html
+++ b/attendance.html
@@ -130,7 +130,7 @@
         </div>
     </div>
 
-    <!-- Dashboard -->
+    <!-- Attendance -->
 
     <section class="dashboard-section">
 
@@ -143,6 +143,77 @@
                 <a href=""><i class='bx bx-user-circle'></i></a>
             </div>
         </header>
+
+        <div class="my-4 ">
+            <h4 style="font-weight: 500;"></h4>
+        </div>
+
+        <div class="row g-3 g-md-4">
+            <div class="col col-md-4 dashboard-cols">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Annual Leave</h5>
+                        <p class="card-text">10 Days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-4 dashboard-cols">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Sick Leave</h5>
+                        <p class="card-text">5 Days</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col12 col-md-4 dashboard-cols">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Other Leave</h5>
+                        <p class="card-text">2 Days</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-4 mt-lg-5">
+            <h4>View Work Schedules</h4>
+            <div class="leave-history mt-3 px-3 px-md-5" style="overflow-x:auto;">
+                <table>
+                    <tr>
+                        <th>S.No</th>
+                        <th>Date</th>
+                        <th>Shift Start</th>
+                        <th>Shift End</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>8 May 2024</td>
+                        <td>08:00 AM</td>
+                        <td>05:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>8 May 2024</td>
+                        <td>08:00 AM</td>
+                        <td>05:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>8 May 2024</td>
+                        <td>08:00 AM</td>
+                        <td>05:00 PM</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>8 May 2024</td>
+                        <td>08:00 AM</td>
+                        <td>05:00 PM</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
+        <div class="empty"></div>
 
     </section>
 
