--- a/payroll.html
+++ b/payroll.html
@@ -131,19 +131,100 @@
         </div>
     </div>
 
-    <!-- Dashboard -->
+    <!-- Payroll -->
 
     <section class="dashboard-section">
 
         <header>
             <div>
-                <h1 class="welcome-text">Pay<span>roll</span></h1>
+                <h1 class="welcome-text">Pay<span>Roll</span></h1>
             </div>
             <div class="header-btns">
                 <a href=""><i class='bx bx-notification'></i></a>
                 <a href=""><i class='bx bx-user-circle'></i></a>
             </div>
         </header>
+
+        <div class="my-4 ">
+            <h4 style="font-weight: 500;"></h4>
+        </div>
+
+        <div class="row g-3 g-md-4">
+            <div class="col col-md-4 dashboard-cols">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Basic Pay</h5>
+                        <p class="card-text">$100</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-md-4 dashboard-cols">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Allowances</h5>
+                        <p class="card-text">$100</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col12 col-md-4 dashboard-cols">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Deductions</h5>
+                        <p class="card-text">$100</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-4 mt-lg-5">
+            <h4>Salary History </h4>
+            <div class="leave-history mt-3 px-3 px-md-5" style="overflow-x:auto;">
+                <table>
+                    <tr>
+                        <th>S.No</th>
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Basic Pay</th>
+                        <th>Allowances</th>
+                        <th>Deductions</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>8 May 2024</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>8 May 2024</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>8 May 2024</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>8 May 2024</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                        <td>$3300</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
+        <div class="empty"></div>
 
     </section>
 
