--- a/reimbursement.html
+++ b/reimbursement.html
@@ -132,7 +132,7 @@
         </div>
     </div>
 
-    <!-- Dashboard -->
+    <!-- Reimbursement -->
 
     <section class="dashboard-section">
 
@@ -145,7 +145,67 @@
                 <a href=""><i class='bx bx-user-circle'></i></a>
             </div>
         </header>
-
+        <div class="row mt-3">
+            <div class="col-12 col-lg-6">
+                <h4>Submit Claim</h4>
+                <form action="" class="reimbursement-form m-lg-3">
+                    <label for="reimbursement-claim-type">
+                        <h6>Claim Type</h6>
+                    </label> <br>
+                    <input type="text" id="reimbursement-claim-type" name="reimbursement-claim-type"
+                        placeholder="Enter Claim Type"> <br>
+                    <label for="reimbursement-amount">
+                        <h6>Amount</h6>
+                    </label> <br>
+                    <input type="text" id="reimbursement-amount" name="reimbursement-amount" placeholder="Enter Amount">
+                    <br>
+                    <label for="reimbursement-file">
+                        <h6>Receipt Upload</h6>
+                    </label> <br>
+                    <input type="file" id="reimbursement-file" name="reimbursement-file" placeholder="Enter Amount"><br>
+                    <button type="submit" class="btn">Submit Claim</button>
+                    <button class="btn">Cancel</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+                <h4>Recents</h4>
+                <div class="leave-history mt-3" style="overflow-x:auto;">
+                    <table>
+                        <tr>
+                            <th>S.No</th>
+                            <th>Payment Date</th>
+                            <th>Amount</th>
+                            <th>Status</th>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>8 May 2024</td>
+                            <td>$200</td>
+                            <td>Pending</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>8 May 2024</td>
+                            <td>$200</td>
+                            <td>Approved</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>8 May 2024</td>
+                            <td>$200</td>
+                            <td>Approved</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>8 May 2024</td>
+                            <td>$200</td>
+                            <td>Approved</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="empty"></div>
     </section>
 
     <!-- Scripts -->
