--- a/payroll.html
+++ b/payroll.html
@@ -149,7 +149,7 @@
             <h4 style="font-weight: 500;"></h4>
         </div>
 
-        <div class="row g-3 g-md-4">
+        <!-- <div class="row g-3 g-md-4">
             <div class="col col-md-4 dashboard-cols">
                 <div class="card h-100">
                     <div class="card-body">
@@ -174,57 +174,96 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="row mt-4 mt-lg-5">
-            <h4>Salary History </h4>
-            <div class="leave-history mt-3 px-3 px-md-5" style="overflow-x:auto;">
-                <table>
-                    <tr>
-                        <th>S.No</th>
-                        <th>Date</th>
-                        <th>Amount</th>
-                        <th>Basic Pay</th>
-                        <th>Allowances</th>
-                        <th>Deductions</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>8 May 2024</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>8 May 2024</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>8 May 2024</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>8 May 2024</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                        <td>$3300</td>
-                    </tr>
-                </table>
+
+        <div class="row">
+            <div class="col-12 col-lg-4 in-main-heads">
+                <div class="d-flex justify-content-between align-items-center in-main-head">
+                    <span>All Invoices</span>
+                    <span>
+                        <button>+ New</button>
+                    </span>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 in-main-heads">
+                <div class="in-main-head d-none d-lg-block">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <span>INV-000181</span>
+                        <span class="in-approve">Pending Approval</span>
+                        <span>🖨️</span>
+                        <span>
+                            <button>Approve</button>
+                            <button>More</button>
+                            <button>X</button>
+                        </span>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 col-lg-4 in-main-cont in-main-cont-left">
+                <div class="each-in-member">
+                    <div class="in-name-amt">
+                        <span class="in-name">William Shakespeare</span>
+                        <span class="in-amount">$84.00</span>
+                    </div>
+                    <div class="in-num-date">
+                        <div>
+                            <span class="in-num">INV000181</span>
+                            <span class="in-date">08/05/2024</span>
+                        </div>
+                        <div class="in-sent">Sent</div>
 
-        <div class="empty"></div>
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="in-name-amt">
+                        <span class="in-name">William Shakespeare</span>
+                        <span class="in-amount">$84.00</span>
+                    </div>
+                    <div class="in-num-date">
+                        <div>
+                            <span class="in-num">INV000181</span>
+                            <span class="in-date">08/05/2024</span>
+                        </div>
+                        <div class="in-sent">Sent</div>
+
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="in-name-amt">
+                        <span class="in-name">William Shakespeare</span>
+                        <span class="in-amount">$84.00</span>
+                    </div>
+                    <div class="in-num-date">
+                        <div>
+                            <span class="in-num">INV000181</span>
+                            <span class="in-date">08/05/2024</span>
+                        </div>
+                        <div class="in-sent">Sent</div>
+
+                    </div>
+                </div>
+                <div class="each-in-member">
+                    <div class="in-name-amt">
+                        <span class="in-name">William Shakespeare</span>
+                        <span class="in-amount">$84.00</span>
+                    </div>
+                    <div class="in-num-date">
+                        <div>
+                            <span class="in-num">INV000181</span>
+                            <span class="in-date">08/05/2024</span>
+                        </div>
+                        <div class="in-sent">Sent</div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 in-main-cont in-main-cont-rigth d-none d-lg-block">
+
+            </div>
+        </div>
 
     </section>
 
